# log

./: '  appender.cpp  appender.h  event.cpp  event.h  formatter.cpp  formatter.h  log.h  logger.cpp  logger.h  type.h  util.cpp  util.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  examplelog  examplelog.cpp  main  main.cpp  pares.cpp  test.cpp
